# GoogleTestSetup

./: .gitignore  CMakeLists.txt  README.md
Test/: CMakeLists.txt
Test/test/: factorial_test.cpp  failed_test_skipped.cpp  stack_test.cpp
Test/test/mockTest/: mock_tertle.h  mock_test.cpp
src/: CMakeLists.txt  main.cpp
src/Painter/: Painter.cpp  Painter.h
src/Stack/: Stack.cpp  Stack.h
src/Test/: factorial_test.cpp
src/Turtle/: Turtle.cpp  Turtle.h
src/util/: Factorial.cpp  Factorial.h
